--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/jet-framework.js",
+  "module": "./dist/jet-framework.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/jet-framework.es.js",
+      "require": "./dist/jet-framework.umd.js"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
